statements documented, and withSource() systematically added when absent